decaf_PA2/src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : SealedOpt CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  13  SealedOpt : SEALED
  14            |

  15  ExtendsClause : EXTENDS IDENTIFIER
  16                |

  17  FieldList : FieldList VariableDef
  18            | FieldList FunctionDef
  19            |

  20  Formals : VariableList
  21          |

  22  VariableList : VariableList ',' Variable
  23               | Variable

  24  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  25              | Type IDENTIFIER '(' Formals ')' StmtBlock

  26  StmtBlock : '{' StmtList '}'

  27  StmtList : StmtList Stmt
  28           |

  29  Stmt : VariableDef
  30       | SimpleStmt ';'
  31       | IfStmt
  32       | WhileStmt
  33       | ForStmt
  34       | ReturnStmt ';'
  35       | PrintStmt ';'
  36       | BreakStmt ';'
  37       | StmtBlock
  38       | OCStmt ';'
  39       | GuardedStmt
  40       | ForeachStmt

  41  AttachedStmt : VariableDef
  42               | SimpleStmt ';'
  43               | IfStmt
  44               | WhileStmt
  45               | ForStmt
  46               | ReturnStmt ';'
  47               | PrintStmt ';'
  48               | BreakStmt ';'
  49               | OCStmt ';'
  50               | GuardedStmt
  51               | ForeachStmt

  52  AttachedStmtBlock : '{' StmtList '}'
  53                    | AttachedStmt

  54  ForeachStmt : FOREACH '(' BoundVariable IN Expr whileExpr ')' AttachedStmtBlock

  55  BoundVariable : VAR IDENTIFIER
  56                | Type IDENTIFIER

  57  whileExpr : WHILE Expr
  58            |

  59  GuardedStmt : IF '{' GuardedCont '}'

  60  GuardedCont : IfBranchs IfSubStmt
  61              |

  62  IfBranchs : IfBranchs IfBranch
  63            |

  64  IfBranch : IfSubStmt TOR

  65  IfSubStmt : Expr ':' Stmt

  66  OCStmt : SCOPY '(' IDENTIFIER ',' Expr ')'

  67  SimpleStmt : LValue '=' Expr
  68             | Call
  69             |

  70  Receiver : Expr '.'
  71           |

  72  LValue : Receiver IDENTIFIER
  73         | Expr '[' Expr ']'
  74         | VAR IDENTIFIER

  75  Call : Receiver IDENTIFIER '(' Actuals ')'

  76  Expr : LValue
  77       | Call
  78       | Constant
  79       | Expr DADD Expr
  80       | Expr DMOD Expr
  81       | Expr '+' Expr
  82       | Expr '-' Expr
  83       | Expr '*' Expr
  84       | Expr '/' Expr
  85       | Expr '%' Expr
  86       | Expr EQUAL Expr
  87       | Expr NOT_EQUAL Expr
  88       | Expr '<' Expr
  89       | Expr '>' Expr
  90       | Expr LESS_EQUAL Expr
  91       | Expr GREATER_EQUAL Expr
  92       | Expr AND Expr
  93       | Expr OR Expr
  94       | '(' Expr ')'
  95       | '-' Expr
  96       | '!' Expr
  97       | READ_INTEGER '(' ')'
  98       | READ_LINE '(' ')'
  99       | THIS
 100       | NEW IDENTIFIER '(' ')'
 101       | NEW Type '[' Expr ']'
 102       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
 103       | '(' CLASS IDENTIFIER ')' Expr
 104       | Expr '[' Expr ':' Expr ']'
 105       | Expr '[' Expr ']' DEFAULT Expr
 106       | '[' Expr FOR IDENTIFIER IN Expr IfExpr ']'

 107  IfExpr : IF Expr

 108  $$1 :

 109  IfExpr : $$1

 110  Constant : LITERAL
 111           | NULL
 112           | ArrayConstant

 113  ArrayConstant : '[' Constants ']'
 114                | '[' ']'

 115  Constants : Constants ',' Constant
 116            | Constant

 117  Actuals : ExprList
 118          |

 119  ExprList : ExprList ',' Expr
 120           | Expr

 121  WhileStmt : WHILE '(' Expr ')' Stmt

 122  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

 123  BreakStmt : BREAK

 124  IfStmt : IF '(' Expr ')' Stmt ElseClause

 125  ElseClause : ELSE Stmt
 126             |

 127  ReturnStmt : RETURN Expr
 128             | RETURN

 129  PrintStmt : PRINT '(' ExprList ')'

state 0
	$accept : . Program $end  (0)
	SealedOpt : .  (14)

	SEALED  shift 1
	CLASS  reduce 14

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4
	SealedOpt  goto 5


state 1
	SealedOpt : SEALED .  (13)

	.  reduce 13


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)
	SealedOpt : .  (14)

	SEALED  shift 1
	$end  reduce 1
	CLASS  reduce 14

	ClassDef  goto 6
	SealedOpt  goto 5


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
	ClassDef : SealedOpt . CLASS IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	CLASS  shift 7
	.  error


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
	ClassDef : SealedOpt CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 8
	.  error


state 8
	ClassDef : SealedOpt CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (16)

	EXTENDS  shift 9
	'{'  reduce 16

	ExtendsClause  goto 10


state 9
	ExtendsClause : EXTENDS . IDENTIFIER  (15)

	IDENTIFIER  shift 11
	.  error


state 10
	ClassDef : SealedOpt CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 12
	.  error


state 11
	ExtendsClause : EXTENDS IDENTIFIER .  (15)

	.  reduce 15


state 12
	ClassDef : SealedOpt CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (19)

	.  reduce 19

	FieldList  goto 13


state 13
	ClassDef : SealedOpt CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (17)
	FieldList : FieldList . FunctionDef  (18)

	VOID  shift 14
	BOOL  shift 15
	INT  shift 16
	STRING  shift 17
	CLASS  shift 18
	STATIC  shift 19
	'}'  shift 20
	.  error

	VariableDef  goto 21
	Variable  goto 22
	Type  goto 23
	FunctionDef  goto 24


state 14
	Type : VOID .  (7)

	.  reduce 7


state 15
	Type : BOOL .  (8)

	.  reduce 8


state 16
	Type : INT .  (6)

	.  reduce 6


state 17
	Type : STRING .  (9)

	.  reduce 9


state 18
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 25
	.  error


state 19
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (24)

	VOID  shift 14
	BOOL  shift 15
	INT  shift 16
	STRING  shift 17
	CLASS  shift 18
	.  error

	Type  goto 26


state 20
	ClassDef : SealedOpt CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 21
	FieldList : FieldList VariableDef .  (17)

	.  reduce 17


state 22
	VariableDef : Variable . ';'  (4)

	';'  shift 27
	.  error


state 23
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (25)

	IDENTIFIER  shift 28
	'['  shift 29
	.  error


state 24
	FieldList : FieldList FunctionDef .  (18)

	.  reduce 18


state 25
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 26
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 30
	'['  shift 29
	.  error


state 27
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 28
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (25)

	'('  shift 31
	';'  reduce 5


state 29
	Type : Type '[' . ']'  (11)

	']'  shift 32
	.  error


state 30
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 33
	.  error


state 31
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (25)
	Formals : .  (21)

	VOID  shift 14
	BOOL  shift 15
	INT  shift 16
	STRING  shift 17
	CLASS  shift 18
	')'  reduce 21

	Variable  goto 34
	Type  goto 35
	Formals  goto 36
	VariableList  goto 37


state 32
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 33
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (21)

	VOID  shift 14
	BOOL  shift 15
	INT  shift 16
	STRING  shift 17
	CLASS  shift 18
	')'  reduce 21

	Variable  goto 34
	Type  goto 35
	Formals  goto 38
	VariableList  goto 37


state 34
	VariableList : Variable .  (23)

	.  reduce 23


state 35
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 39
	'['  shift 29
	.  error


state 36
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (25)

	')'  shift 40
	.  error


state 37
	Formals : VariableList .  (20)
	VariableList : VariableList . ',' Variable  (22)

	','  shift 41
	')'  reduce 20


state 38
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 42
	.  error


state 39
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 40
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (25)

	'{'  shift 43
	.  error

	StmtBlock  goto 44


state 41
	VariableList : VariableList ',' . Variable  (22)

	VOID  shift 14
	BOOL  shift 15
	INT  shift 16
	STRING  shift 17
	CLASS  shift 18
	.  error

	Variable  goto 45
	Type  goto 35


state 42
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 43
	.  error

	StmtBlock  goto 46


state 43
	StmtBlock : '{' . StmtList '}'  (26)
	StmtList : .  (28)

	.  reduce 28

	StmtList  goto 47


state 44
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (25)

	.  reduce 25


state 45
	VariableList : VariableList ',' Variable .  (22)

	.  reduce 22


state 46
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 47
	StmtBlock : '{' StmtList . '}'  (26)
	StmtList : StmtList . Stmt  (27)
	SimpleStmt : .  (69)
	Receiver : .  (71)

	VOID  shift 14
	BOOL  shift 15
	INT  shift 16
	STRING  shift 17
	CLASS  shift 18
	NULL  shift 48
	THIS  shift 49
	WHILE  shift 50
	FOR  shift 51
	IF  shift 52
	RETURN  shift 53
	BREAK  shift 54
	NEW  shift 55
	PRINT  shift 56
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'['  shift 64
	'{'  shift 43
	'}'  shift 65
	SCOPY  shift 66
	VAR  shift 67
	FOREACH  shift 68
	IDENTIFIER  reduce 71
	';'  reduce 69

	VariableDef  goto 69
	Variable  goto 22
	Type  goto 35
	StmtBlock  goto 70
	Stmt  goto 71
	SimpleStmt  goto 72
	IfStmt  goto 73
	WhileStmt  goto 74
	ForStmt  goto 75
	ReturnStmt  goto 76
	PrintStmt  goto 77
	BreakStmt  goto 78
	OCStmt  goto 79
	GuardedStmt  goto 80
	ForeachStmt  goto 81
	Expr  goto 82
	LValue  goto 83
	Call  goto 84
	Receiver  goto 85
	Constant  goto 86
	ArrayConstant  goto 87


state 48
	Constant : NULL .  (111)

	.  reduce 111


state 49
	Expr : THIS .  (99)

	.  reduce 99


state 50
	WhileStmt : WHILE . '(' Expr ')' Stmt  (121)

	'('  shift 88
	.  error


state 51
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (122)

	'('  shift 89
	.  error


state 52
	GuardedStmt : IF . '{' GuardedCont '}'  (59)
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (124)

	'('  shift 90
	'{'  shift 91
	.  error


state 53
	ReturnStmt : RETURN . Expr  (127)
	ReturnStmt : RETURN .  (128)
	Receiver : .  (71)

	NULL  shift 48
	THIS  shift 49
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'['  shift 64
	VAR  shift 67
	IDENTIFIER  reduce 71
	';'  reduce 128

	Expr  goto 92
	LValue  goto 93
	Call  goto 94
	Receiver  goto 85
	Constant  goto 86
	ArrayConstant  goto 87


state 54
	BreakStmt : BREAK .  (123)

	.  reduce 123


state 55
	Expr : NEW . IDENTIFIER '(' ')'  (100)
	Expr : NEW . Type '[' Expr ']'  (101)

	VOID  shift 14
	BOOL  shift 15
	INT  shift 16
	STRING  shift 17
	CLASS  shift 18
	IDENTIFIER  shift 95
	.  error

	Type  goto 96


state 56
	PrintStmt : PRINT . '(' ExprList ')'  (129)

	'('  shift 97
	.  error


state 57
	Expr : READ_INTEGER . '(' ')'  (97)

	'('  shift 98
	.  error


state 58
	Expr : READ_LINE . '(' ')'  (98)

	'('  shift 99
	.  error


state 59
	Constant : LITERAL .  (110)

	.  reduce 110


state 60
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (102)

	'('  shift 100
	.  error


state 61
	Expr : '-' . Expr  (95)
	Receiver : .  (71)

	NULL  shift 48
	THIS  shift 49
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'['  shift 64
	VAR  shift 67
	IDENTIFIER  reduce 71

	Expr  goto 101
	LValue  goto 93
	Call  goto 94
	Receiver  goto 85
	Constant  goto 86
	ArrayConstant  goto 87


state 62
	Expr : '!' . Expr  (96)
	Receiver : .  (71)

	NULL  shift 48
	THIS  shift 49
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'['  shift 64
	VAR  shift 67
	IDENTIFIER  reduce 71

	Expr  goto 102
	LValue  goto 93
	Call  goto 94
	Receiver  goto 85
	Constant  goto 86
	ArrayConstant  goto 87


state 63
	Expr : '(' . Expr ')'  (94)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (103)
	Receiver : .  (71)

	CLASS  shift 103
	NULL  shift 48
	THIS  shift 49
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'['  shift 64
	VAR  shift 67
	IDENTIFIER  reduce 71

	Expr  goto 104
	LValue  goto 93
	Call  goto 94
	Receiver  goto 85
	Constant  goto 86
	ArrayConstant  goto 87


state 64
	Expr : '[' . Expr FOR IDENTIFIER IN Expr IfExpr ']'  (106)
	ArrayConstant : '[' . Constants ']'  (113)
	ArrayConstant : '[' . ']'  (114)
	Receiver : .  (71)

	NULL  shift 48
	THIS  shift 49
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'['  shift 64
	']'  shift 105
	VAR  shift 67
	IDENTIFIER  reduce 71

	Expr  goto 106
	LValue  goto 93
	Call  goto 94
	Receiver  goto 85
	Constant  goto 107
	ArrayConstant  goto 87
	Constants  goto 108


state 65
	StmtBlock : '{' StmtList '}' .  (26)

	.  reduce 26


state 66
	OCStmt : SCOPY . '(' IDENTIFIER ',' Expr ')'  (66)

	'('  shift 109
	.  error


state 67
	LValue : VAR . IDENTIFIER  (74)

	IDENTIFIER  shift 110
	.  error


state 68
	ForeachStmt : FOREACH . '(' BoundVariable IN Expr whileExpr ')' AttachedStmtBlock  (54)

	'('  shift 111
	.  error


state 69
	Stmt : VariableDef .  (29)

	.  reduce 29


state 70
	Stmt : StmtBlock .  (37)

	.  reduce 37


state 71
	StmtList : StmtList Stmt .  (27)

	.  reduce 27


state 72
	Stmt : SimpleStmt . ';'  (30)

	';'  shift 112
	.  error


state 73
	Stmt : IfStmt .  (31)

	.  reduce 31


state 74
	Stmt : WhileStmt .  (32)

	.  reduce 32


state 75
	Stmt : ForStmt .  (33)

	.  reduce 33


state 76
	Stmt : ReturnStmt . ';'  (34)

	';'  shift 113
	.  error


state 77
	Stmt : PrintStmt . ';'  (35)

	';'  shift 114
	.  error


state 78
	Stmt : BreakStmt . ';'  (36)

	';'  shift 115
	.  error


state 79
	Stmt : OCStmt . ';'  (38)

	';'  shift 116
	.  error


state 80
	Stmt : GuardedStmt .  (39)

	.  reduce 39


state 81
	Stmt : ForeachStmt .  (40)

	.  reduce 40


state 82
	Receiver : Expr . '.'  (70)
	LValue : Expr . '[' Expr ']'  (73)
	Expr : Expr . DADD Expr  (79)
	Expr : Expr . DMOD Expr  (80)
	Expr : Expr . '+' Expr  (81)
	Expr : Expr . '-' Expr  (82)
	Expr : Expr . '*' Expr  (83)
	Expr : Expr . '/' Expr  (84)
	Expr : Expr . '%' Expr  (85)
	Expr : Expr . EQUAL Expr  (86)
	Expr : Expr . NOT_EQUAL Expr  (87)
	Expr : Expr . '<' Expr  (88)
	Expr : Expr . '>' Expr  (89)
	Expr : Expr . LESS_EQUAL Expr  (90)
	Expr : Expr . GREATER_EQUAL Expr  (91)
	Expr : Expr . AND Expr  (92)
	Expr : Expr . OR Expr  (93)
	Expr : Expr . '[' Expr ':' Expr ']'  (104)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (105)

	AND  shift 117
	OR  shift 118
	LESS_EQUAL  shift 119
	GREATER_EQUAL  shift 120
	EQUAL  shift 121
	NOT_EQUAL  shift 122
	'+'  shift 123
	'-'  shift 124
	'*'  shift 125
	'/'  shift 126
	'%'  shift 127
	'>'  shift 128
	'<'  shift 129
	'.'  shift 130
	'['  shift 131
	DMOD  shift 132
	DADD  shift 133
	.  error


state 83
	SimpleStmt : LValue . '=' Expr  (67)
	Expr : LValue .  (76)

	'='  shift 134
	AND  reduce 76
	OR  reduce 76
	LESS_EQUAL  reduce 76
	GREATER_EQUAL  reduce 76
	EQUAL  reduce 76
	NOT_EQUAL  reduce 76
	'+'  reduce 76
	'-'  reduce 76
	'*'  reduce 76
	'/'  reduce 76
	'%'  reduce 76
	'>'  reduce 76
	'<'  reduce 76
	'.'  reduce 76
	'['  reduce 76
	DMOD  reduce 76
	DADD  reduce 76


state 84
	SimpleStmt : Call .  (68)
	Expr : Call .  (77)

	AND  reduce 77
	OR  reduce 77
	LESS_EQUAL  reduce 77
	GREATER_EQUAL  reduce 77
	EQUAL  reduce 77
	NOT_EQUAL  reduce 77
	'+'  reduce 77
	'-'  reduce 77
	'*'  reduce 77
	'/'  reduce 77
	'%'  reduce 77
	'>'  reduce 77
	'<'  reduce 77
	'.'  reduce 77
	';'  reduce 68
	')'  reduce 68
	'['  reduce 77
	DMOD  reduce 77
	DADD  reduce 77


state 85
	LValue : Receiver . IDENTIFIER  (72)
	Call : Receiver . IDENTIFIER '(' Actuals ')'  (75)

	IDENTIFIER  shift 135
	.  error


state 86
	Expr : Constant .  (78)

	.  reduce 78


state 87
	Constant : ArrayConstant .  (112)

	.  reduce 112


state 88
	WhileStmt : WHILE '(' . Expr ')' Stmt  (121)
	Receiver : .  (71)

	NULL  shift 48
	THIS  shift 49
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'['  shift 64
	VAR  shift 67
	IDENTIFIER  reduce 71

	Expr  goto 136
	LValue  goto 93
	Call  goto 94
	Receiver  goto 85
	Constant  goto 86
	ArrayConstant  goto 87


state 89
	ForStmt : FOR '(' . SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (122)
	SimpleStmt : .  (69)
	Receiver : .  (71)

	NULL  shift 48
	THIS  shift 49
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'['  shift 64
	VAR  shift 67
	IDENTIFIER  reduce 71
	';'  reduce 69

	SimpleStmt  goto 137
	Expr  goto 82
	LValue  goto 83
	Call  goto 84
	Receiver  goto 85
	Constant  goto 86
	ArrayConstant  goto 87


state 90
	IfStmt : IF '(' . Expr ')' Stmt ElseClause  (124)
	Receiver : .  (71)

	NULL  shift 48
	THIS  shift 49
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'['  shift 64
	VAR  shift 67
	IDENTIFIER  reduce 71

	Expr  goto 138
	LValue  goto 93
	Call  goto 94
	Receiver  goto 85
	Constant  goto 86
	ArrayConstant  goto 87


state 91
	GuardedStmt : IF '{' . GuardedCont '}'  (59)
	GuardedCont : .  (61)
	IfBranchs : .  (63)

	NULL  reduce 63
	THIS  reduce 63
	NEW  reduce 63
	READ_INTEGER  reduce 63
	READ_LINE  reduce 63
	LITERAL  reduce 63
	IDENTIFIER  reduce 63
	INSTANCEOF  reduce 63
	'-'  reduce 63
	'!'  reduce 63
	'('  reduce 63
	'['  reduce 63
	'}'  reduce 61
	VAR  reduce 63

	GuardedCont  goto 139
	IfBranchs  goto 140


state 92
	Receiver : Expr . '.'  (70)
	LValue : Expr . '[' Expr ']'  (73)
	Expr : Expr . DADD Expr  (79)
	Expr : Expr . DMOD Expr  (80)
	Expr : Expr . '+' Expr  (81)
	Expr : Expr . '-' Expr  (82)
	Expr : Expr . '*' Expr  (83)
	Expr : Expr . '/' Expr  (84)
	Expr : Expr . '%' Expr  (85)
	Expr : Expr . EQUAL Expr  (86)
	Expr : Expr . NOT_EQUAL Expr  (87)
	Expr : Expr . '<' Expr  (88)
	Expr : Expr . '>' Expr  (89)
	Expr : Expr . LESS_EQUAL Expr  (90)
	Expr : Expr . GREATER_EQUAL Expr  (91)
	Expr : Expr . AND Expr  (92)
	Expr : Expr . OR Expr  (93)
	Expr : Expr . '[' Expr ':' Expr ']'  (104)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (105)
	ReturnStmt : RETURN Expr .  (127)

	AND  shift 117
	OR  shift 118
	LESS_EQUAL  shift 119
	GREATER_EQUAL  shift 120
	EQUAL  shift 121
	NOT_EQUAL  shift 122
	'+'  shift 123
	'-'  shift 124
	'*'  shift 125
	'/'  shift 126
	'%'  shift 127
	'>'  shift 128
	'<'  shift 129
	'.'  shift 130
	'['  shift 131
	DMOD  shift 132
	DADD  shift 133
	';'  reduce 127


state 93
	Expr : LValue .  (76)

	.  reduce 76


state 94
	Expr : Call .  (77)

	.  reduce 77


state 95
	Expr : NEW IDENTIFIER . '(' ')'  (100)

	'('  shift 141
	.  error


state 96
	Type : Type . '[' ']'  (11)
	Expr : NEW Type . '[' Expr ']'  (101)

	'['  shift 142
	.  error


state 97
	PrintStmt : PRINT '(' . ExprList ')'  (129)
	Receiver : .  (71)

	NULL  shift 48
	THIS  shift 49
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'['  shift 64
	VAR  shift 67
	IDENTIFIER  reduce 71

	Expr  goto 143
	LValue  goto 93
	Call  goto 94
	Receiver  goto 85
	Constant  goto 86
	ArrayConstant  goto 87
	ExprList  goto 144


state 98
	Expr : READ_INTEGER '(' . ')'  (97)

	')'  shift 145
	.  error


state 99
	Expr : READ_LINE '(' . ')'  (98)

	')'  shift 146
	.  error


state 100
	Expr : INSTANCEOF '(' . Expr ',' IDENTIFIER ')'  (102)
	Receiver : .  (71)

	NULL  shift 48
	THIS  shift 49
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'['  shift 64
	VAR  shift 67
	IDENTIFIER  reduce 71

	Expr  goto 147
	LValue  goto 93
	Call  goto 94
	Receiver  goto 85
	Constant  goto 86
	ArrayConstant  goto 87


state 101
	Receiver : Expr . '.'  (70)
	LValue : Expr . '[' Expr ']'  (73)
	Expr : Expr . DADD Expr  (79)
	Expr : Expr . DMOD Expr  (80)
	Expr : Expr . '+' Expr  (81)
	Expr : Expr . '-' Expr  (82)
	Expr : Expr . '*' Expr  (83)
	Expr : Expr . '/' Expr  (84)
	Expr : Expr . '%' Expr  (85)
	Expr : Expr . EQUAL Expr  (86)
	Expr : Expr . NOT_EQUAL Expr  (87)
	Expr : Expr . '<' Expr  (88)
	Expr : Expr . '>' Expr  (89)
	Expr : Expr . LESS_EQUAL Expr  (90)
	Expr : Expr . GREATER_EQUAL Expr  (91)
	Expr : Expr . AND Expr  (92)
	Expr : Expr . OR Expr  (93)
	Expr : '-' Expr .  (95)
	Expr : Expr . '[' Expr ':' Expr ']'  (104)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (105)

	'.'  shift 130
	'['  shift 131
	WHILE  reduce 95
	FOR  reduce 95
	IF  reduce 95
	AND  reduce 95
	OR  reduce 95
	LESS_EQUAL  reduce 95
	GREATER_EQUAL  reduce 95
	EQUAL  reduce 95
	NOT_EQUAL  reduce 95
	'+'  reduce 95
	'-'  reduce 95
	'*'  reduce 95
	'/'  reduce 95
	'%'  reduce 95
	'>'  reduce 95
	'<'  reduce 95
	','  reduce 95
	';'  reduce 95
	')'  reduce 95
	']'  reduce 95
	':'  reduce 95
	DMOD  reduce 95
	DADD  reduce 95


state 102
	Receiver : Expr . '.'  (70)
	LValue : Expr . '[' Expr ']'  (73)
	Expr : Expr . DADD Expr  (79)
	Expr : Expr . DMOD Expr  (80)
	Expr : Expr . '+' Expr  (81)
	Expr : Expr . '-' Expr  (82)
	Expr : Expr . '*' Expr  (83)
	Expr : Expr . '/' Expr  (84)
	Expr : Expr . '%' Expr  (85)
	Expr : Expr . EQUAL Expr  (86)
	Expr : Expr . NOT_EQUAL Expr  (87)
	Expr : Expr . '<' Expr  (88)
	Expr : Expr . '>' Expr  (89)
	Expr : Expr . LESS_EQUAL Expr  (90)
	Expr : Expr . GREATER_EQUAL Expr  (91)
	Expr : Expr . AND Expr  (92)
	Expr : Expr . OR Expr  (93)
	Expr : '!' Expr .  (96)
	Expr : Expr . '[' Expr ':' Expr ']'  (104)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (105)

	'.'  shift 130
	'['  shift 131
	WHILE  reduce 96
	FOR  reduce 96
	IF  reduce 96
	AND  reduce 96
	OR  reduce 96
	LESS_EQUAL  reduce 96
	GREATER_EQUAL  reduce 96
	EQUAL  reduce 96
	NOT_EQUAL  reduce 96
	'+'  reduce 96
	'-'  reduce 96
	'*'  reduce 96
	'/'  reduce 96
	'%'  reduce 96
	'>'  reduce 96
	'<'  reduce 96
	','  reduce 96
	';'  reduce 96
	')'  reduce 96
	']'  reduce 96
	':'  reduce 96
	DMOD  reduce 96
	DADD  reduce 96


state 103
	Expr : '(' CLASS . IDENTIFIER ')' Expr  (103)

	IDENTIFIER  shift 148
	.  error


state 104
	Receiver : Expr . '.'  (70)
	LValue : Expr . '[' Expr ']'  (73)
	Expr : Expr . DADD Expr  (79)
	Expr : Expr . DMOD Expr  (80)
	Expr : Expr . '+' Expr  (81)
	Expr : Expr . '-' Expr  (82)
	Expr : Expr . '*' Expr  (83)
	Expr : Expr . '/' Expr  (84)
	Expr : Expr . '%' Expr  (85)
	Expr : Expr . EQUAL Expr  (86)
	Expr : Expr . NOT_EQUAL Expr  (87)
	Expr : Expr . '<' Expr  (88)
	Expr : Expr . '>' Expr  (89)
	Expr : Expr . LESS_EQUAL Expr  (90)
	Expr : Expr . GREATER_EQUAL Expr  (91)
	Expr : Expr . AND Expr  (92)
	Expr : Expr . OR Expr  (93)
	Expr : '(' Expr . ')'  (94)
	Expr : Expr . '[' Expr ':' Expr ']'  (104)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (105)

	AND  shift 117
	OR  shift 118
	LESS_EQUAL  shift 119
	GREATER_EQUAL  shift 120
